--- a/style.css
+++ b/style.css
@@ -1,18 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@100&display=swap');
 
 
-#logo{
-    width: 5%;
-    margin-left: 15px;
-    margin-right: 15px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
+
 #menu{
-    display: inline-flex;
-    text-align: center;
-    background-color: white;
+    background-color: black;
+    color: white;
+    font-size: x-large;
+    
 }
+#menu img {
+    max-width: 15%;
+     margin-left: 15px;
+     margin-top: 10px;
+     margin-bottom: 10px;
+ }
 
 #menu nav{
     width: 100%;
@@ -29,9 +30,11 @@ iframe{
   
 }
 #video{
-    background-image: url(2pac-Chi-Modu-LYFSTYL.jpg);  
+    background-image: url(imagenes/2pac-Chi-Modu-LYFSTYL.jpg);  
     background-size: cover;
     text-align: center;
+   width: 5%;
+    
 }
 
 #rappers{
