--- a/stylePac.css
+++ b/stylePac.css
@@ -1,13 +1,11 @@
 #menu {
-    display: inline-flex;
-    color: white;
-    align-items: center;
-    text-align: center;
+   color: white;
     background-color: black;
+    font-size: x-large;
 
 }
 #menu img {
-   max-width: 20%;
+   max-width: 15%;
     margin-left: 15px;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -18,11 +16,10 @@ footer {
     color: black;
     text-align: center;
 }
-h1, h2 {
-    margin-left: 11em;
-    margin-right: 8.5em;
-}
+
 .container {
-    margin-top: 20px;
+    display: flex;
+   
+    justify-items: space-between ;
 }
 
